--- a/ivreg/templates/index.html
+++ b/ivreg/templates/index.html
@@ -7,5 +7,6 @@
 <ul>
   <li><a href="#" target="_blank">Autorizacija</a></li>
   <li><a href="{% url "registration" %}">Registracija</a></li>
+  <li><a href="{% url "verify" %}">Balso patikrinimas</a></li>
 </ul>
 {% endblock %}
