--- a/ivreg/templates/index.html
+++ b/ivreg/templates/index.html
@@ -5,8 +5,7 @@
 <h1>Išankstinis registravimasis</h1>
 
 <ul>
-  <li><a href="#" target="_blank">Autorizacija</a></li>
-  <li><a href="{% url "registration" %}">Registracija</a></li>
+  <li><a href="http://autz.rk.sub.lt/credentials/">Registracija</a></li>
   <li><a href="{% url "verify" %}">Balso patikrinimas</a></li>
 </ul>
 {% endblock %}
